codama-macros/tests/codama_attribute/enum_discriminator_directive/too_many_sizes.fail.rs
use codama_macros::codama;

#[codama(enum_discriminator(size = number(u16), size = number(u32)))]
pub struct Test;

fn main() {}
